--- a/src/Components/SelectionButton/SelectionButton.css
+++ b/src/Components/SelectionButton/SelectionButton.css
@@ -1,3 +1,10 @@
 .btn-secondary{
     margin-top: 10px;
 }
+.selection-button{
+    border: none;
+    background-color: white;
+    text-decoration: none;
+    font-weight: 600;
+    margin: 10px 10px;
+}
